# gopass-utils

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/gopass_utils/: gopass_utils.py  gu_logger.py  ssh_unlock.py
