[project]
name = "gopass-utils"
version = "0.1.0"
description = "Reusable Gopass interface for Python projects"
authors = [{ name = "Rick", email = "rick@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gopass_utils"]
package-dir = { "" = "src" }

