[project]
name = "rickslab-gopass-utils"
version = "0.1.0"
description = "Reusable Gopass interface for Python projects"
authors = [{ name = "Rick", email = "rick@example.com" }]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["gopass_utils"]
